Finished first crop pipeline AAdded all needed parameters to config.ini modified slice_generator to work for only one image

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -1,10 +1,15 @@
 [general]
 verbose=1
 random_seed=155
+size=
+slices=
 [data]
-data_ebm=/home/gerard/Documents/DATA/metadata/EBM/EBM.csv
-data_ucsd=/home/gerard/Documents/DATA/metadata/Davatzikos_data/UCSDVOL-1.csv
-data_upenn=/home/gerard/Documents/DATA/metadata/Davatzikos_data/UCSDVOL-1.csv
+bids_folder=/home/gerard/Documents/DATA/metadata/EBM/EBM.csv
 metadata=/home/gerard/Documents/DATA/metadata/ADNI/ADNIMERGE.csv
+CROPS=/home/gerard/Documents/EXPERIMENTS/3DCNN/
+metadata_crops=/home/gerard/Documents/EXPERIMENTS/3DCNN/
+[folders]
+EXPERIMENTS=/home/gerard/Documents/EXPERIMENTS/3DCNN/
+
 [images]
 s=1
