Moving cropping part to dataio Fixed some bugs

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -1,15 +1,13 @@
 [general]
 verbose=1
 random_seed=155
-size=
-slices=
+size=16,112,112
+slices=4
 [data]
-bids_folder=/home/gerard/Documents/DATA/metadata/EBM/EBM.csv
-metadata=/home/gerard/Documents/DATA/metadata/ADNI/ADNIMERGE.csv
-CROPS=/home/gerard/Documents/EXPERIMENTS/3DCNN/
-metadata_crops=/home/gerard/Documents/EXPERIMENTS/3DCNN/
+bids_folder=/homedtic/gmarti/DATA/Data/ADNI_BIDS/
+metadata=/homedtic/gmarti/DATA/ADNImetadata/3DCNN/ADNIMERGE_SMALL.csv
+metadata_crops=metadata_crops.csv
 [folders]
-EXPERIMENTS=/home/gerard/Documents/EXPERIMENTS/3DCNN/
-
+EXPERIMENTS=/homedtic/gmarti/EXPERIMENTS/3DCNN/
 [images]
 s=1
