--- a/configs/config.ini
+++ b/configs/config.ini
@@ -1,12 +1,15 @@
 [general]
 verbose=1
 random_seed=155
-size=16,112,112
-slices=4
+new_size=112,112,112
 [data]
 bids_folder=/homedtic/gmarti/DATA/Data/ADNI_BIDS/derivatives/space_baseline/
 metadata=/homedtic/gmarti/DATA/ADNImetadata/3DCNN/ADNIMERGE_SMALL.csv
 metadata_crops=metadata_crops.csv
+[model]
+weights=/homedtic/gmarti/CODE/3d-conv-ad/models/sports1M_weights_tf.h5
+mean=/homedtic/gmarti/CODE/3d-conv-ad/models/train01_16_128_171_mean.npy
+batch_size=16
 [folders]
 EXPERIMENTS=/homedtic/gmarti/EXPERIMENTS/3DCNN/
 [images]
